lex/src/snapshots/lex__tests__empty_input.snap
---
source: src/lib.rs
expression: "Lexer :: lex(\"\")"
---
TokenizedOutput {
    source: "",
    tokens: [],
    token_sources: [],
    lines: [
        Line {
            start: 0,
            end: 0,
        },
    ],
}
