lex/src/snapshots/lex__tests__multiple_simple_ident.snap
---
source: src/lib.rs
expression: "Lexer :: lex(\"ident main func int hi\")"
---
TokenizedOutput {
    source: "ident main func int hi",
    tokens: [
        Token {
            ttype: Ident,
            has_error: false,
            handle: 0,
        },
        Token {
            ttype: Ident,
            has_error: false,
            handle: 1,
        },
        Token {
            ttype: Ident,
            has_error: false,
            handle: 2,
        },
        Token {
            ttype: Ident,
            has_error: false,
            handle: 3,
        },
        Token {
            ttype: Ident,
            has_error: false,
            handle: 4,
        },
    ],
    token_sources: [
        TokenSource {
            start: 0,
            end: 5,
            line: 0,
        },
        TokenSource {
            start: 6,
            end: 10,
            line: 0,
        },
        TokenSource {
            start: 11,
            end: 15,
            line: 0,
        },
        TokenSource {
            start: 16,
            end: 19,
            line: 0,
        },
        TokenSource {
            start: 20,
            end: 22,
            line: 0,
        },
    ],
    lines: [
        Line {
            start: 0,
            end: 22,
        },
    ],
}
